[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/PlanetInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gui/GameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gui/Welcome.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gui/SpeciesInfo.tscn" type="PackedScene" id=5]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlanetInfo" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SpeciesInfo" parent="." instance=ExtResource( 5 )]

[node name="GameOver" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Welcome" parent="." instance=ExtResource( 4 )]
[connection signal="restart_game" from="PlanetInfo" to="." method="_on_PlanetInfo_restart_game"]
